# ReportCXR

./: .gitignore  MEMORY.md  README.md  _quarto.yml  custom.scss  dvc.yaml  handout.md  index.qmd  nohup.out  params.yaml  pyproject.toml  references.bib  requirements.txt
demo/: README.md  app.py  requirements.txt
doc/: architecture.qmd  data_pipeline.qmd  demo_deployment.qmd  domain_shift_modules.qmd  evaluation_modules.qmd  training_pipeline.qmd
docs/: index.html  robots.txt  search.json  sitemap.xml  styles.css
memory/: project_reportcxr.md  user_diego.md
notebooks/: 01_eda.ipynb  02_baseline_zero_shot.ipynb  03_train_kaggle.ipynb  03_train_local.ipynb  04_eval_and_figures.ipynb  05_rag_retrieval.ipynb  06_association_rules.ipynb
report/: 01_introduction.qmd  02_data.qmd  03_model_training.qmd  04_evaluation.qmd  05_domain_shift.qmd  05_inference_conditioning.qmd  06_domain_shift.qmd  06_production_scaling.qmd  07_production_scaling.qmd
reports/: acq_shift_uniform_v3_brightness.json  acq_shift_uniform_v3_contrast.json  acq_shift_uniform_v3_gamma.json  acq_shift_uniform_v3_gaussian_noise.json  acq_shift_uniform_v3_jpeg_compression.json  baseline_results.json  diary.md  eval_hypotheses_assoc_rules_uniform_v3.json  eval_hypotheses_assoc_rules_weighted_v4.json  eval_hypotheses_nohint_uniform_v3.json  eval_hypotheses_nohint_weighted_v4.json  eval_hypotheses_rag_assoc_combined_uniform_v3.json  eval_hypotheses_rag_assoc_combined_weighted_v4.json  eval_hypotheses_rag_k3_uniform_v3.json  eval_hypotheses_uniform_v3.json  eval_hypotheses_weighted_v4.json  (+12 more)
(+39 files in other folders)
