[project]
name = "reportcxr"
version = "0.1.0"
description = "VLM for Chest X-ray Report Generation with Quantified Domain Shift Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
